--- a/mailhub/src/main/resources/application.properties
+++ b/mailhub/src/main/resources/application.properties
@@ -2,18 +2,25 @@ spring.application.name=mailhub
 
 imap.host=${IMAP_HOST}
 imap.port=${IMAP_PORT}
-imap.username=${IMAP_USERNAME}
-imap.password=${IMAP_PASSWORD}
 
-# spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+
 spring.jpa.hibernate.ddl-auto=update
 
 
 jwt.secretKey=${JWT_SECRETKEY}
 
-# server.shutdown=immediate
+
+
+
+
+File Upload settings
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+app.upload.dir=./uploads/images
