--- a/mailhub/pom.xml
+++ b/mailhub/pom.xml
@@ -97,6 +97,7 @@
 	</dependencies>
 
 	<build>
+    <finalName>mailhub-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
