--- a/mailhub/Dockerfile
+++ b/mailhub/Dockerfile
@@ -1,3 +1,18 @@
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
 FROM eclipse-temurin:21-jdk
-ADD target/mailhub-backend.jar mailhub-backend.jar
-ENTRYPOINT ["java","-jar","mailhub-backend.jar"]
+
+WORKDIR /app
+
+COPY --from=build /app/target/*.jar app.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
