--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "dompurify": "^3.3.0",
     "isomorphic-dompurify": "^2.30.1",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
